<resources>
    <string name="app_name">Calculator</string>
    <string name="calculation_text">Calculation</string>
    <string name="result_text">Result</string>
    <string name="clear_button">Clear</string>
    <string name="backspace_button">backspace</string>
    <string name="btn_7">7</string>
    <string name="btn_8">8</string>
    <string name="btn_9">9</string>
    <string name="btn_10">10</string>
    <string name="btn_6">6</string>
    <string name="btn_5">5</string>
    <string name="btn_4">4</string>
    <string name="btn_3">3</string>
    <string name="btn_2">2</string>
    <string name="btn_1">1</string>
    <string name="divide_btn">/</string>
    <string name="mutiply_btn">*</string>
    <string name="subtract_btn">-</string>
    <string name="btn_dot">.</string>
    <string name="btn_0">0</string>
    <string name="btn_equal">=</string>
    <string name="btn_add">+</string>

</resources>